Basic Page Template
Not entirely polished, as we still need the images and stuff and I will need to finish a few features.
That being said, if you add the content between the "main" tags, you should be fine

--- a/resources/footer.htm
+++ b/resources/footer.htm
@@ -1,27 +1,27 @@
-<!--External Footer page for Assignment 2
+<!--External Footer page for Assignment 3
 
-Brayden Kubota and Micah Higashi
+Lauren Lee and Micah Higashi
 ITM 352
-04 April 2019
+18 April 2019
 Professor Kazman
 -->
 <footer class="backgroundPlatform">
     <div style="text-align: left;">
         <u>CONTACT INFORMATION</u><br>
         To get in touch with this webpage's designers, please contact either 
-        <a href="mailto:brayden7@hawaii.edu">Brayden</a> or
+        <a href="mailto:laurenl4@hawaii.edu">Lauren</a> or
         <a href="mailto:micahemh@hawaii.edu">Micah</a>
         via their university-based email services.
     </div>
     <div style="text-align: center;">
         &copy;2019, NotReallyButItLooksCool, Ltd.
         <br><small><small><small><small>ALL RIGHTS REVERSED</small></small></small></small><br><br>
-        Assignment 2's deliverables can be found on the class website
-        <a href="http://itm-vm.shidler.hawaii.edu/itm352/assignment2.html">here</a>.
+        Assignment 3's deliverables can be found on the class website
+        <a href="http://itm-vm.shidler.hawaii.edu/itm352/assignment3.html">here</a>.
     </div>
     <div style="text-align: right;">
         <u>DISCLAIMER</u><br>This webpage is purely for academic purposes
         only. No financial transaction can/will occur from
-        the use of this web page. Donations are appreciated though.
+        the use of this web page.
     </div>
 </footer>
